aks/monitoring/rocketchat-tracing-instrumentation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-tracing-patch
  namespace: rocketchat
spec:
  template:
    spec:
      containers:
      - name: rocketchat
        volumeMounts:
        - name: tracing-config
          mountPath: /app/tracing.js
          subPath: tracing.js
      volumes:
      - name: tracing-config
        configMap:
          name: rocketchat-tracing-config
